<resources>
    <string name="app_name">Healthy</string>
    <string name="drug_info">补益肝肾，清热明目。用于肝肾两亏，虚火上炎引起：内外翳障，瞳仁散大，视力减退，夜盲昏花，目涩羞明，迎风流泪</string>
    <string name="take_photo">拍照</string>
    <string name="upload_from_phone">从手机相册选择</string>
    <string name="news_content">"【药品名称】\n【成份】肉豆蔻(煨)、木香、六神曲(炒)、麦芽(炒)、胡黄连、槟榔、使君子仁。\n【性状】本品为黑棕色至黑褐色的大蜜丸；味微甜、苦。\n【功能主治】健胃消积，驱虫。用于小儿消化不良，虫积腹痛，面黄肌瘦，食少腹胀泄泻。\n【规格】每丸重3g\n【用法用量】口服。一次1～2丸，一日1～2次；三岁以内小儿酌减。\n【不良反应】尚不明确。\n【禁忌】尚不明确。\n【注意事项】服用前应除去蜡皮、塑料球壳；本品可嚼服，也可分份吞服。\n【贮藏】密封。\n【包装】塑料球壳装，每丸重3g。"</string>
    <string name="drug_card1">【说明书标题】小儿复方氨酚烷胺片 \n【药品类型】化学药品 \n【药品名称】小儿复方氨酚烷胺片 \n 【药品汉语拼音】\n【药品商品名称】\n【药品英文名称】</string>
    <string name="drug_card2">【成份】本品为复方制剂，每片含对乙酰氨基酚100毫克、盐酸金刚烷胺40毫克、咖啡因6毫克、马来酸氯苯那敏0.8毫克、人工牛黄4毫克。\n\n
        【性状】 \n【作用类别】本品为感冒用药类非处方药药品。\n\n 【适应症/功能主治】适用于缓解儿童普通感冒及流行性感冒引起的发热、头痛、四肢酸痛、打喷嚏、流鼻涕、鼻塞、咽痛等症状。 \n\n
        【用法用量】口服。1～2岁儿童，一次半片；2～5岁，一次1片；5～12岁，一次1～2片；一日2次。\n\n
        【禁忌】严重肝肾功能不全者禁用。 \n\n【不良反应】有时有轻度头晕、乏力、恶心、上腹不适、口干、食欲缺乏和皮疹等，可自行恢复。\n\n
        【注意事项】1.用药3-7天，症状未缓解，请咨询医师或药师。2.1岁以下儿童应在医师指导下使用。3.服用本品期间不得饮酒或含有酒精的饮料。4.不能同时服用与本品成份相似的其他抗感冒药。5.肝功能不全、肾功能不全、精神病史或癫痫病史患者慎用。6.如服用过量或出现严重不良反应，应立即就医。7.对本品过敏者禁用，过敏体质者慎用。8.本品性状发生改变时禁止使用。9.请将本品放在儿童不能接触的地方。10.儿童必须在成人监护下使用。11.如正在使用其他药品，使用本品前请咨询医师或药师。\n\n
        【药物相互作用】1.与其他解热镇痛药同用，可增加肾毒性的危险。2.本品不宜与氯霉素、巴比妥类（如苯巴比妥）等并用。3.如与其他药物同时使用可能会发生药物相互作用，详情请咨询医师或药师。 \n\n
        【药理作用】对乙酰氨基酚能抑制前列腺素合成，有解热镇痛的作用；金刚烷胺可抗“亚一甲型”流感病毒，抑制病毒繁殖；咖啡因为中枢兴奋药，能增强对乙酰氨基酚的解热镇痛效果，并能减轻其他药物所致的嗜睡、头晕等中枢抑制作用；马来酸氯苯那敏为抗过敏药，能减轻流涕、鼻塞、打喷嚏等症状；人工牛黄具有解热、镇惊作用。上述诸药配伍制成复方，可增强解热、镇痛效果，解除或改善感冒所引起的各种症状。 \n</string>
    <string name="drug_card3">【贮藏】 \n【包装】 \n【有效期】\n【执行标准】\n【批准文号】\n【说明书修订日期】\n
        【生产企业】企业名称：生产地址：邮政编码：电话号码：传真号码：网址：如有问题可与生产企业联系\n【备注】请仔细阅读说明书并按说明使用或在药师指导下购买和使用。</string>
    <!--新版登录专用-->
    <string name="login">登录</string>
    <string name="login_form">登录界面</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="register_password">请输入至少六位数密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="login_register_hint">注册</string>
    <string name="register_form">注册界面</string>
    <string name="complete_register">完成</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>

    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="copy_msg">已经复制链接地址到剪切板! </string>
    <string name="title_activity_data_select">DataSelectActivity</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
</resources>
